Fixed legends, realigned bike seat instructions

--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,11 @@ h6 {
   padding-bottom: 30px;
 }
 
+#instructions {
+  text-align: left;
+  padding-bottom: 10px;
+}
+
 /*#saddle-imgs {*/
 /*  */
 /*}*/
